# game-data-update

./: CONTRIBUTING.md  Dockerfile.batorment  README.md  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/DISCUSSION_TEMPLATE/: general.yml  questions.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: docker_build.yml  sync-labels.yml
aecheck/: README.md  compare.py  constants.py  image.py  models.py  postgres.py  scrape.py  update.py
ba-torment-api/: README.md  main.py  models.py
ba-torment-api/api/: router.py
ba-torment-api/log/: middleware.py
ba-torment-api/utils/: youtube.py
ba-torment-batch/: README.md  constants.py  main.py
ba-torment-batch/parse/: character.py  party.py  rank.py  result.py
ba-torment-batch/utils/: database.py
ba-torment-manual/: main.py  validate.py
ba-torment-manual/output/: S70-summary.json  S72-summary.json
sql/: ba-torment.sql
